Terraform/network.tf
data "aws_availability_zones" "available" {}

resource "aws_vpc" "main" {
	cidr_block = "${var.vpc_cidr_block}"
	enable_dns_support = "true"
	enable_dns_hostnames = "true"

	tags = {
		Name = "DeviceHive VPC"
	}
}

resource "aws_subnet" "public" {
	count             = "${var.az_count}"
	cidr_block        = "${cidrsubnet(aws_vpc.main.cidr_block, 8, count.index)}"
	availability_zone = "${data.aws_availability_zones.available.names[count.index]}"
	vpc_id            = "${aws_vpc.main.id}"
	map_public_ip_on_launch = "true"

	tags = {
		Name = "DeviceHive Public Subnet ${data.aws_availability_zones.available.names[count.index]}"
		Public = "True"
	}
}

resource "aws_subnet" "private" {
	count             = "${var.az_count}"
	cidr_block        = "${cidrsubnet(aws_vpc.main.cidr_block, 8, count.index + 100)}"
	availability_zone = "${data.aws_availability_zones.available.names[count.index]}"
	vpc_id            = "${aws_vpc.main.id}"

	tags = {
		Name = "DeviceHive Subnet ${data.aws_availability_zones.available.names[count.index]}"
		Public = "False"
	}
}

resource "aws_internet_gateway" "igw" {
	vpc_id = "${aws_vpc.main.id}"
}

resource "aws_route_table" "public" {
	vpc_id = "${aws_vpc.main.id}"

	route {
		cidr_block = "0.0.0.0/0"
		gateway_id = "${aws_internet_gateway.igw.id}"
	}

	tags = {
		Name = "DeviceHive igw routes"
	}
}

resource "aws_route_table" "private" {
	vpc_id = "${aws_vpc.main.id}"

	tags = {
		Name = "DeviceHive private routes"
	}
}

resource "aws_route_table_association" "public_assoc" {
	count          = "${var.az_count}"
	subnet_id      = "${element(aws_subnet.public.*.id, count.index)}"
	route_table_id = "${aws_route_table.public.id}"
}

resource "aws_route_table_association" "private_assoc" {
	count          = "${var.az_count}"
	subnet_id      = "${element(aws_subnet.private.*.id, count.index)}"
	route_table_id = "${aws_route_table.private.id}"
}
